change width of anchor elements inside mainNav to correct wrap issue

--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,7 @@ a{
 	text-decoration: none;
     font-size: 1.1 em;
     padding: 1% 3% 1% 3%;
+    width: 10%;
 }
 a:hover{
     background: black;
